<resources>
    <!--not ever change-->
    <string name="md5_code">md51988</string>
    <!--<string name="app_name">BabyCare</string>-->
    <string name="app_name">嘟嘟手记</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--common-->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="app_crash">应用程序错误</string>
    <string name="app_crash_message">很抱歉应用出现错误即将退出，请选择邮件方式将问题提交给我，我将尽快修复问题，谢谢！</string>
    <string name="app_crash_submit_report">提交报告</string>
    <string name="app_crash_subject">Android客户端报告错误</string>
    <string name="app_crash_message_title">请将此错误报告发送给我，以便我尽快修复此问题，谢谢合作！</string>
    <string name="choose_email_client">请选择Email客户端</string>


    <!-- user-->
    <string name="username">用户名</string>
    <string name="baby_name">宝宝名</string>
    <string name="edit_baby_name">编辑宝宝名</string>
    <string name="email">电子邮箱</string>
    <string name="edit_email">编辑电子邮箱</string>
    <string name="phone">手机号码</string>
    <string name="edit_phone">编辑手机号码</string>
    <string name="username_or_email">用户名/电子邮箱</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="already_a_member_and_login">已经有账号？登入</string>
    <string name="create_account">创建账号</string>
    <string name="login">登入</string>
    <string name="register">注册</string>
    <string name="reset_password">重设密码</string>
    <string name="forgot_password_title">忘记密码</string>
    <string name="no_account_yet_create_one">还没有账号？创建</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_baby_name">宝宝名不能为空</string>
    <string name="empty_email">Email不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="invalid_email">邮箱格式不正确</string>
    <string name="invalid_password">密码长度至少需要6位</string>
    <string name="invalid_confirm_password">2次密码输入不一致</string>
    <string name="add_photo">添加头像</string>
    <string name="upload_picture_option">上传图片选项</string>
    <string name="not_support_crop">This device doesn\'t support the crop action!</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender">性别</string>
    <string name="birth">出生日期</string>
    <string name="edit_birth">编辑出生日期</string>
    <string name="zone">时区</string>
    <string name="hobbies">兴趣爱好</string>
    <string name="edit_hobbies">编辑兴趣爱好</string>
    <string name="unknown_gender">保密</string>
    <string name="logout">登出账号</string>
    <string name="logout_message">您确定要退出当前账号吗？</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="dialog_forgot_password">请输入你的电子邮箱，我们将发送给你验证码以重设密码</string>
    <string name="enter_verify_code">请输入验证码</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_confirm_password">请再次输入密码</string>
    <string name="resend">重新发送</string>
    <string name="change_password">更改密码</string>
    <string name="click_resend_verify_code">点击重新发送验证码</string>
    <string name="sent_verify_code_message">验证码已发送到你的邮箱，请查收</string>
    <string name="countdown_resend_message">%d秒后重新发送</string>


    <!--event-->
    <string name="title">标题</string>
    <string name="date">日期</string>
    <string name="content">内容</string>
    <string name="add">添加</string>
    <string name="add_event">新增手记</string>
    <string name="empty_title">标题不能为空</string>
    <string name="empty_content">内容不能为空</string>
    <string name="comment">评论</string>
    <string name="show_more">更多内容</string>

    <string name="delete">删除</string>
    <string name="retry">重试</string>
    <string name="delete_event_alert">是否确定删除？</string>

    <string name="title_activity_image_pager">ImagePagerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--left-->
    <string name="others">其它</string>
    <string name="user_info">用户信息</string>
    <string name="share">分享</string>
    <string name="message">消息</string>
    <string name="feedback">反馈信息</string>
    <string name="home_page">主页</string>
    <string name="setting">设置</string>
    <string name="bookmark">收藏</string>
    <string name="mine">我的</string>
    <string name="share_message">一个记录宝宝生活点滴的应用程序，点击下载%1$s\nhttps://play.google.com/store/apps/details?id=%2$s</string>


    <!--aviary-->
    <string name="feather_illuminate">我的</string>
    <string name="feather_notification_restore_all_completed">我的</string>
    <string name="feather_acc_decrease_value">我的</string>
    <string name="feather_image_saved">我的</string>
    <string name="feather_iap_restore_all_summary">我的</string>
    <string name="feather_new_effects">我的</string>
    <string name="feather_new_frames">我的</string>
    <string name="feather_iap_restore_all">我的</string>
    <string name="feather_message_title">我的</string>
    <string name="feather_notification_n_items_cant_be_restored">%1$s 我的</string>
    <string name="feather_new_stickers">我的</string>
    <string name="feather_effects_error_update_pack">我的</string>
    <string name="feather_effects_end_of_list">我的</string>
    <string name="feather_about_dialog_message">我的</string>
    <string name="feather_message_button_no">我的</string>
    <string name="feather_rectangle">我的</string>
    <string name="feather_effects_error_update_editor">我的</string>
    <string name="feather_effects_error_update_editors">我的</string>
    <string name="feather_version">我的</string>
    <string name="feather_iap_restore">我的</string>
    <string name="feather_iap_error">我的</string>
    <string name="feather_hidef">我的</string>
    <string name="feather_message_button_yes">我的</string>
    <string name="feather_iap_failed_download_previews">我的</string>
    <string name="feather_feedback_dialog_message">我的</string>
    <string name="feather_circle">我的</string>
    <string name="feather_effects_beginning_of_list">我的</string>
    <string name="feather_plugin_error_download">我的</string>
    <string name="feather_acc_increase_value">我的</string>
    <string name="feather_iap_restore_all_in_progress">我的</string>
    <string name="feather_shapes">我的</string>
    <string name="feather_plugin_error_storage_not_available">我的</string>
    <string name="feather_effects_error_update_packs">我的</string>
    <string name="feather_purchase_failed">我的</string>
    <string name="feather_send_feedback">我的</string>
    <string name="feather_iap_owned">我的</string>
    <string name="feather_iap_failed_download_informations">我的</string>
    <string name="feather_colorfix">我的</string>
    <string name="feather_notification_some_items_cant_be_restored">我的</string>
    <string name="feather_item_not_found">我的</string>
    <string name="feather_no_purchase_made">我的</string>
    <string name="feather_message_text">我的</string>
    <string name="feather_effects_error_loading_packs">我的</string>
    <string name="feather_acc_a_sticker">我的</string>
    <string name="feather_acc_lens_toggle">我的</string>
    <string name="feather_restore_all_request_sent">我的</string>
    <string name="feather_iap_pack_installed">我的</string>
    <string name="feather_effects_error_update_multiple">我的</string>
    <string name="feather_feedback">我的</string>
    <string name="feather_iap_unavailable">我的</string>
    <string name="feather_iap_download_failed">我的</string>
    <string name="feather_iap_restore_all_failed">我的</string>
    <string name="feather_effects_unknown_errors">我的</string>
    <string name="feather_effects_error_loading_pack">我的</string>
    <string name="feather_notification_plus_more">%1$d 我的</string>
    <string name="feather_please_try_again_later">我的</string>
    <string name="feather_iap_download">我的</string>
    <string name="feather_effects_unknown_error">我的</string>
    <string name="feather_iap_list_empty_message">我的</string>
    <string name="feather_tool_leave_question">我的</string>
    <string name="feather_download_start_failed">我的</string>
    <string name="feather_plugin_error_corrupted">我的</string>
    <string name="feather_acc_flip_v">我的</string>
    <string name="feather_acc_size">我的</string>
    <string name="feather_iap_notification_installed_summary">我的</string>
    <string name="feather_try_again">我的</string>
    <string name="feather_acc_rotate_cw">我的</string>
    <string name="feather_notification_no_items_to_restore">我的</string>
    <string name="feather_acc_flip_h">我的</string>
    <string name="feather_acc_rotate_ccw">我的</string>
    <string name="feather_acc_color">我的</string>
    <string name="feather_unsaved_from_camera">我的</string>
    <string name="feather_iap_banner_text">我的</string>
    <string name="feather_iap_installing">我的</string>
    <string name="feather_notification_plugins_installed_count">%1$d 我的</string>
    <string name="feather_iap_retry">Retry</string>
</resources>
