<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@mipmap/ic_view_list_black_24dp"
            android:title="@string/mine" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark_24dp"
            android:title="@string/bookmark" />

        <!--<item-->
        <!--android:id="@+id/nav_slideshow"-->
        <!--android:icon="@drawable/ic_menu_slideshow"-->
        <!--android:title="Slideshow" />-->
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_personal_info"
                android:icon="@mipmap/ic_account_box_black_24dp"
                android:title="@string/user_info" />

            <item
                android:id="@+id/nav_message"
                android:visible="false"
                android:icon="@mipmap/ic_message_black_24dp"
                android:title="@string/message" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_feedback_black_24dp"
                android:title="@string/feedback" />

            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share_white_24dp"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/setting" />
            <!--<item-->
            <!--android:id="@+id/nav_send"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="Send" />-->

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
