<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_below="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/button_margin_vertical"
        android:paddingRight="@dimen/button_margin_vertical"
        android:paddingTop="@dimen/button_margin_vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/default_input_layout">

            <EditText
                android:id="@+id/et_username"
                style="@style/default_edit_text"
                android:hint="@string/username"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/username_layout">

            <EditText
                android:id="@+id/et_email"
                style="@style/default_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/email_layout">

            <EditText
                android:id="@+id/et_password"
                style="@style/default_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/password_layout">

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/default_edit_text"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/default_bottom_button"
            android:layout_above="@+id/tv_link_login"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/tv_link_login"
            style="@style/default_bottom_text"
            android:layout_alignParentBottom="true"
            android:text="@string/already_a_member_and_login" />
    </RelativeLayout>
</RelativeLayout>
