<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/button_margin_vertical"
    android:paddingRight="@dimen/button_margin_vertical"
    android:paddingTop="56dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/button_margin_vertical"
        android:src="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/login_input_layout"
        android:layout_below="@+id/img">

        <EditText
            android:id="@+id/et_username"
            style="@style/login_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/login_input_layout"
        android:layout_below="@+id/username_layout">

        <EditText
            android:id="@+id/et_password"
            style="@style/login_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/bottom_button"
        android:layout_above="@+id/tv_link_signup"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_link_signup"
        style="@style/login_bottom_text"
        android:layout_alignParentBottom="true"
        android:text="@string/no_account_yet_create_one" />

</RelativeLayout>
