<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/app_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout"
        android:paddingLeft="@dimen/button_margin_vertical"
        android:paddingRight="@dimen/button_margin_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_register"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:id="@+id/profile_layout"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" >

                    <ImageButton
                        android:id="@+id/ib_profile"
                        android:background="@android:color/transparent"
                        android:src="@drawable/bg_camera"
                        android:layout_width="@dimen/profile_size"
                        android:layout_height="@dimen/profile_size" />

                    <TextView
                        android:id="@+id/tv_add_profile"
                        android:layout_marginBottom="13dp"
                        android:layout_centerHorizontal="true"
                        android:layout_alignBottom="@+id/ib_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_photo" />
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_toStartOf="@+id/profile_layout"
                    style="@style/default_input_layout">

                    <EditText
                        android:id="@+id/et_username"
                        style="@style/default_edit_text"
                        android:hint="@string/username"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/baby_name_layout"
                    style="@style/default_input_layout"
                    android:layout_toStartOf="@+id/profile_layout"
                    android:layout_below="@+id/username_layout">

                    <EditText
                        android:id="@+id/et_baby_name"
                        style="@style/default_edit_text"
                        android:hint="@string/baby_name"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/default_input_layout"
                    android:layout_below="@+id/baby_name_layout">

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/default_edit_text"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/default_input_layout"
                    android:layout_below="@+id/email_layout">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/default_input_layout"
                    android:layout_below="@+id/password_layout">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        style="@style/default_edit_text"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/default_bottom_button"
            android:layout_above="@+id/tv_link_login"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/tv_link_login"
            style="@style/default_bottom_text"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/button_margin_vertical"
            android:text="@string/already_a_member_and_login" />
    </RelativeLayout>

    <include layout="@layout/progress" />
</RelativeLayout>
