<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/app_bar_layout" />

    <RelativeLayout
        android:gravity="center"
        android:layout_below="@+id/app_bar_layout"
        android:layout_above="@+id/btn_change_password"
        android:paddingLeft="@dimen/button_margin_vertical"
        android:paddingRight="@dimen/button_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/profile_large_size"
            android:layout_height="@dimen/profile_large_size"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/boy"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verify_code_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/img_profile" >

            <EditText
                android:id="@+id/et_verify_code"
                style="@style/default_edit_text"
                android:inputType="number"
                android:hint="@string/enter_verify_code"  />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/verify_code_layout">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/default_input_layout"
            android:layout_below="@+id/password_layout">

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/default_edit_text"
                android:hint="@string/enter_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_resend_verify_code"
            android:layout_below="@+id/confirm_password_layout"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            android:paddingTop="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding"
            android:paddingStart="@dimen/text_padding"
            android:text="@string/click_resend_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_change_password"
        style="@style/default_bottom_button"
        android:layout_marginLeft="@dimen/button_margin_vertical"
        android:layout_marginRight="@dimen/button_margin_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/change_password" />

    <include layout="@layout/progress" />
</RelativeLayout>
